fixed alignment

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -259,3 +259,7 @@ form button {
     height: 45px;
     width: 150px;
 }
+
+main {
+    text-align: center;
+}
